<resources>
    <!-- Examples, helpful while developing -->
    <string name="example_menu_name">Breakfast menu</string>
    <string name="example_food_name">Fish and chips</string>
    <string name="example_food_description">Fish and chips is a hot dish of British origin consisting of fried battered fish and hot potato chips.</string>
    <string name="example_food_price">49.99 zł</string>
    <string name="example_food_selected_additions">Selected additions: tartar sauce, coleslaw</string>
    <string name="example_food_addition_name">Food addition name</string>
    <string name="example_food_addition_price">1.99 zł</string>
    <string name="example_order_full_price">129.99 zł</string>
    <string name="example_order_items_number">8</string>
    <string name="example_order_state">Ready</string>
    <string name="example_order_foods">Fish and chips, hamburger</string>
    <string name="example_user_name">John Smith</string>
    <string name="example_currency">zł</string>
    <string name="example_waiting_time">40</string>

    <!-- Common -->
    <string name="app_name">eWaiter</string>
    <string name="app_description">Your last stop at ordering food.\nAllows you to browse menu and place orders in a fast and simple way.\nJust log in and you are good to go.</string>
    <string name="button_log_in">Log in</string>
    <string name="button_sign_in">Sign in</string>
    <string name="something_wrong">Something went wrong</string>
    <string name="common_empty_email">Email cannot be empty</string>
    <string name="common_password_empty">Password cannot be empty</string>

    <!-- Login/Register activity -->
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="retype_password">Retype password</string>
    <string name="button_go_back">Go back</string>
    <string name="login_error">Could not log in. Check your email and password.</string>
    <string name="register_password_length_error">Password is too weak. Needs to be at least 8 characters long.</string>
    <string name="register_name_error">Invalid name. Name has to be at least 3 characters long without numbers and without special characters.</string>
    <string name="register_email_error">This is not a valid email.</string>
    <string name="register_passwords_different_error">Provided password do not match. Make sure you entered the same password to both password fields.</string>
    <string name="register_no_internet_error">Could not register new user. No internet connection.</string>
    <string name="register_success">New user registered.</string>

    <!-- Customer -->
        <!-- Actions -->
        <string name="action_order_cart">Order cart</string>
        <string name="action_log_out">Logout</string>

        <!-- Menu -->
        <string name="menu_list_no_menu_available">There are no menus available</string>

        <!-- Food -->
        <string name="food_added_to_cart">Food added to cart</string>
        <string name="food_add_food_to_cart">Add food to cart</string>

        <!-- Order cart -->
        <string name="order_cart_title">Order</string>
        <string name="order_cart_add_to_cart">Add to cart</string>
        <string name="order_cart_full_order_price">Full order price:</string>
        <string name="order_cart_items_in_cart">Items in cart:</string>
        <string name="order_cart_confirm_order">Confirm order</string>
        <string name="order_cart_cancel_order">Cancel order</string>
        <string name="order_cart_remove_food_from_order">Remove food from order</string>
        <string name="order_cart_selected_additions">Selected additions:</string>
        <string name="order_cart_submitted_order">Your order has been submitted. It should be ready in about %s minutes.</string>
        <string name="order_cart_submitting_error">Couldn\'t submit your order. Please try again later.</string>
        <string name="order_cart_no_additions_label">No additions selected</string>
        <string name="order_cart_item_summary_begging">Selected additions</string>

    <!-- Management -->
        <!-- Admin dashboard -->
        <string name="admin_dashboard_new_orders">New orders</string>
        <string name="admin_dashboard_orders_in_progress">Orders in progress</string>
        <string name="admin_dashboard_completed_orders">Completed orders</string>
        <string name="admin_dashboard_manage_menus">Manage menus</string>

        <!-- Order -->
        <string name="order_details_ordered_by">Ordered by</string>
        <string name="order_details_total_items_ordered">Total items ordered</string>
        <string name="order_details_order_state">Order state</string>
        <string name="order_details_price">Price</string>
        <string name="order_details_ordered_items">Ordered items</string>
        <string name="order_details_confirm">Confirm</string>
        <string name="order_details_reject">Reject</string>
        <string name="orders_list_no_orders">There are no orders</string>
        <string name="orders_list_order_for">Order for</string>
        <string name="order_details_set_order_ready">Ready</string>
        <string name="order_details_set_order_served">Serve</string>

        <!-- Food -->
        <string name="food_details_admin_delete_food">Delete food</string>

        <!-- Menu -->
        <string name="menu_create_menu_name">Menu name</string>
        <string name="menu_create_confirm">Create</string>
        <string name="menus_list_delete">Delete</string>
</resources>
