<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_conversion_absoluteHeight="72dp"
        tools:layout_conversion_absoluteWidth="384dp">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout_conversion_absoluteHeight="72dp"
            tools:layout_conversion_absoluteWidth="384dp"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp">

            <TextView
                android:id="@+id/fullOrderPriceLabelTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/order_cart_full_order_price"
                android:textAppearance="@android:style/TextAppearance.Material.Large.Inverse"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_conversion_absoluteHeight="30dp"
                tools:layout_conversion_absoluteWidth="368dp" />

            <TextView
                android:id="@+id/fullOrderPriceTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/example_order_full_price"
                android:textAppearance="@android:style/TextAppearance.Material.Large.Inverse"
                app:layout_constraintBottom_toBottomOf="@+id/fullOrderPriceLabelTextView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/fullOrderPriceLabelTextView"
                app:layout_constraintTop_toTopOf="@+id/fullOrderPriceLabelTextView" />

            <TextView
                android:id="@+id/itemsAmountLabelTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="8dp"
                android:text="@string/order_cart_items_in_cart"
                android:textAppearance="@android:style/TextAppearance.Material.Small.Inverse"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fullOrderPriceLabelTextView"
                tools:layout_conversion_absoluteHeight="19dp"
                tools:layout_conversion_absoluteWidth="368dp" />

            <TextView
                android:id="@+id/itemsAmountTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/example_order_items_number"
                android:textAppearance="@android:style/TextAppearance.Material.Small.Inverse"
                app:layout_constraintBottom_toBottomOf="@+id/itemsAmountLabelTextView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/itemsAmountLabelTextView"
                app:layout_constraintTop_toTopOf="@+id/itemsAmountLabelTextView" />
        </android.support.constraint.ConstraintLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appbar"
        tools:context="com.canteen.app.activity.cart.OrderCartActivity"
        tools:layout_conversion_absoluteHeight="511dp"
        tools:layout_conversion_absoluteWidth="384dp">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/orderItemsRecyclerView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/confirmOrderButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.343"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.537"
            tools:layout_conversion_absoluteHeight="463dp"
            tools:layout_conversion_absoluteWidth="384dp" />

        <Button
            android:id="@+id/confirmOrderButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/order_cart_confirm_order"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/cancelOrderButton"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_conversion_absoluteHeight="48dp"
            tools:layout_conversion_absoluteWidth="192dp" />

        <Button
            android:id="@+id/cancelOrderButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/order_cart_cancel_order"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/confirmOrderButton"
            tools:layout_conversion_absoluteHeight="48dp"
            tools:layout_conversion_absoluteWidth="192dp" />
    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>